--- a/ts3server-pro/www/index.html
+++ b/ts3server-pro/www/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TS3 Admin Pro</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0/dist/themes/light.css">
-  <link rel="stylesheet" href="styles.css">
+    <title>TS3 Admin</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0/dist/themes/light.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <!-- Backup Section -->
-    <sl-card class="backup-management">
-      <div slot="header">Backup Verwaltung</div>
-      <sl-button variant="primary" id="create-backup">Jetzt Backup erstellen</sl-button>
-      <div id="backup-list"></div>
-    </sl-card>
+    <div class="container">
+        <sl-card class="server-stats">
+            <div slot="header">Server Status</div>
+            <div id="stats"></div>
+        </sl-card>
 
-    <!-- License Upload -->
-    <sl-card>
-      <div slot="header">Lizenz hochladen</div>
-      <input type="file" id="license-upload" accept=".ini">
-      <sl-button variant="success" onclick="uploadLicense()">Hochladen</sl-button>
-    </sl-card>
+        <sl-card>
+            <div slot="header">Verbundene Benutzer</div>
+            <div id="client-list" class="client-grid"></div>
+        </sl-card>
 
-    <!-- MySQL Query Interface -->
-    <sl-card>
-      <div slot="header">SQL Abfrage</div>
-      <sl-textarea id="sql-query"></sl-textarea>
-      <sl-button variant="primary" onclick="runQuery()">Ausführen</sl-button>
-      <div id="query-result"></div>
-    </sl-card>
-  </div>
+        <sl-card>
+            <div slot="header">Administration</div>
+            <sl-button variant="primary" id="refresh">Aktualisieren</sl-button>
+            <sl-button variant="danger" id="backup">Backup erstellen</sl-button>
+            <sl-input type="file" id="license" accept=".ini"></sl-input>
+        </sl-card>
+    </div>
 
-  <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0/dist/shoelace.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
